change layout feature

--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@
                 </div>
                 <div class="catalog__items-filter__change">
                   <!-- change grid layout -->
-                  <img src="./img/grid-vertical.svg" alt="" />
-                  <img src="./img/grid-rows.svg" alt="" />
+                  <img src="./img/grid-vertical.svg" alt="" data-layout="rows" />
+                  <img src="./img/grid-rows.svg" alt="" data-layout="grid" />
                 </div>
               </div>
               <!-- ///// -->
