started product page and trying to make swiper to work correctly

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/main.css" />
     <script defer type="module" src="./index.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   </head>
   <body>
     <header class="header" id="header">
@@ -271,6 +272,46 @@
               <div class="catalog__items-grid">
                 <!-- items from js -->
               </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="product-page">
+        <div class="container">
+          <div class="product-page__title title-2">item title</div>
+
+          <div class="product-page__main">
+            <div class="product-page__main-row">
+              <div class="product-page__main-row__left">
+                <div class="swiper mySwiper2">
+                  <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                      <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
+                    </div>
+                  </div>
+                </div>
+                <div thumbsSlider="" class="swiper mySwiper">
+                  <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                      <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="product-page__main-row__right"></div>
             </div>
           </div>
         </div>
