--- a/index.html
+++ b/index.html
@@ -280,41 +280,7 @@
 
       <section class="product-page">
         <div class="container">
-          <div class="product-page__title title-2">item title</div>
-
-          <div class="product-page__main">
-            <div class="product-page__main-row">
-              <div class="product-page__main-row__left">
-                <div class="swiper mySwiper2">
-                  <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                      <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
-                    </div>
-                    <div class="swiper-slide">
-                      <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
-                    </div>
-                    <div class="swiper-slide">
-                      <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
-                    </div>
-                  </div>
-                </div>
-                <div thumbsSlider="" class="swiper mySwiper">
-                  <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                      <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
-                    </div>
-                    <div class="swiper-slide">
-                      <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
-                    </div>
-                    <div class="swiper-slide">
-                      <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="product-page__main-row__right"></div>
-            </div>
-          </div>
+          <!-- render from js -->
         </div>
       </section>
     </main>
