recently viewed section and small changes about clicks on items are done

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>MVM</title>
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <script defer type="module" src="./index.js"></script>
@@ -75,115 +75,7 @@
         </div>
 
         <div class="recent">
-          <div class="container">
-            <h2 class="recent__title title-2">Recently viewed</h2>
-            <div class="recent__grid">
-              <div class="recent__item">
-                <div class="recent__item-img">
-                  <img src="./img/shopping.jpg" alt="" />
-                </div>
-                <div class="recent__item-title">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, ex. Lorem ipsum
-                </div>
-                <div class="recent__item-bottom">
-                  <div class="recent__item-rating">
-                    <div class="recent__item-rating__img">
-                      <img src="./img/star.svg" alt="" />
-                    </div>
-                    <div class="recent__item-rating__num">4.5</div>
-                    <div class="recent__item-rating__reviews">3 reviews</div>
-                  </div>
-                  <div class="recent__item-cta">
-                    <div class="recent__item-cta__price">$ 14</div>
-                    <div class="recent__item-cta__favorite recent__item-cta__img">
-                      <img src="./img/heart.svg" alt="" />
-                    </div>
-                    <div class="recent__item-cta__cart recent__item-cta__img">
-                      <img src="./img/cart.svg" alt="" />
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="recent__item">
-                <div class="recent__item-img">
-                  <img src="./img/shopping.jpg" alt="" />
-                </div>
-                <div class="recent__item-title">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, ex. Lorem ipsum
-                </div>
-                <div class="recent__item-bottom">
-                  <div class="recent__item-rating">
-                    <div class="recent__item-rating__img">
-                      <img src="./img/star.svg" alt="" />
-                    </div>
-                    <div class="recent__item-rating__num">4.5</div>
-                    <div class="recent__item-rating__reviews">3 reviews</div>
-                  </div>
-                  <div class="recent__item-cta">
-                    <div class="recent__item-cta__price">$ 14</div>
-                    <div class="recent__item-cta__favorite recent__item-cta__img">
-                      <img src="./img/heart.svg" alt="" />
-                    </div>
-                    <div class="recent__item-cta__cart recent__item-cta__img">
-                      <img src="./img/cart.svg" alt="" />
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="recent__item">
-                <div class="recent__item-img">
-                  <img src="./img/shopping.jpg" alt="" />
-                </div>
-                <div class="recent__item-title">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, ex. Lorem ipsum
-                </div>
-                <div class="recent__item-bottom">
-                  <div class="recent__item-rating">
-                    <div class="recent__item-rating__img">
-                      <img src="./img/star.svg" alt="" />
-                    </div>
-                    <div class="recent__item-rating__num">4.5</div>
-                    <div class="recent__item-rating__reviews">3 reviews</div>
-                  </div>
-                  <div class="recent__item-cta">
-                    <div class="recent__item-cta__price">$ 14</div>
-                    <div class="recent__item-cta__favorite recent__item-cta__img">
-                      <img src="./img/heart.svg" alt="" />
-                    </div>
-                    <div class="recent__item-cta__cart recent__item-cta__img">
-                      <img src="./img/cart.svg" alt="" />
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="recent__item">
-                <div class="recent__item-img">
-                  <img src="./img/shopping.jpg" alt="" />
-                </div>
-                <div class="recent__item-title">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, ex. Lorem ipsum
-                </div>
-                <div class="recent__item-bottom">
-                  <div class="recent__item-rating">
-                    <div class="recent__item-rating__img">
-                      <img src="./img/star.svg" alt="" />
-                    </div>
-                    <div class="recent__item-rating__num">4.5</div>
-                    <div class="recent__item-rating__reviews">3 reviews</div>
-                  </div>
-                  <div class="recent__item-cta">
-                    <div class="recent__item-cta__price">$ 14</div>
-                    <div class="recent__item-cta__favorite recent__item-cta__img">
-                      <img src="./img/heart.svg" alt="" />
-                    </div>
-                    <div class="recent__item-cta__cart recent__item-cta__img">
-                      <img src="./img/cart.svg" alt="" />
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+          <div class="container"></div>
         </div>
       </section>
 
