--- a/index.html
+++ b/index.html
@@ -175,6 +175,13 @@
           <!-- render from js -->
         </div>
       </section>
+
+      <section class="search">
+        <div class="container">
+          <div class="loader"></div>
+          <div class="search__grid"></div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
