--- a/index.html
+++ b/index.html
@@ -176,10 +176,9 @@
         </div>
       </section>
 
-      <section class="search">
+      <section class="searchItems">
         <div class="container">
-          <div class="loader"></div>
-          <div class="search__grid"></div>
+          <div class="searchItems__grid"></div>
         </div>
       </section>
     </main>
