new js structure

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         </div>
       </section>
 
-      <section class="searchItems">
+      <section class="searchItems hidden">
         <div class="container">
           <div class="searchItems__grid"></div>
         </div>
