--- a/index.html
+++ b/index.html
@@ -181,6 +181,20 @@
           <div class="searchItems__grid"></div>
         </div>
       </section>
+
+      <section class="favorites hidden">
+        <div class="container">
+          <div class="favorites__title title-2">Favorites</div>
+
+          <div class="favorites__heading">
+            <div class="favorites__heading-title">0 items worth: $0</div>
+          </div>
+
+          <div class="favorites__main layout-rows">
+            <!-- items from js -->
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
