--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- <i class="fa-solid fa-check"></i> -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,6 +7,10 @@
     <title>MVM</title>
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    />
     <script defer type="module" src="./index.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   </head>
@@ -30,7 +35,7 @@
           </div>
           <nav class="nav">
             <div class="nav__item" data-nav-favorites>
-              <img src="./img/heart.svg" class="nav__item-img" alt="" />
+              <i class="fa-regular fa-heart"></i>
               <div class="nav__item-title">Favorites</div>
             </div>
             <div class="nav__item" data-nav-cart>
