--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <div class="nav__item-title">Cart</div>
             </div>
             <div class="nav__item" data-nav-profile>
-              <img src="./img/profile.svg" alt="" />
+              <i class="fa-regular fa-user"></i>
             </div>
           </nav>
         </div>
