--- a/index.html
+++ b/index.html
@@ -200,6 +200,12 @@
           </div>
         </div>
       </section>
+
+      <section class="cart hidden">
+        <div class="container">
+          <div class="cart__title title-2">Cart <span>${products.length} items</span></div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
