redid js structure a bit and created cart item page

--- a/index.html
+++ b/index.html
@@ -204,6 +204,42 @@
       <section class="cart hidden">
         <div class="container">
           <div class="cart__title title-2">Cart <span>${products.length} items</span></div>
+
+          <div class="cart__row">
+            <div class="cart__left layout-rows">
+              <div class="cart__item">
+                <div class="placeholder"></div>
+                <div class="recent__item-img">
+                  <img src="${item.images[0]}" alt="" class="recent__item-img__image" />
+                </div>
+                <div class="catalog__items-product__content">
+                  <div class="recent__item-title">${item.title}</div>
+                  <div class="recent__item-bottom">
+                    <div class="recent__item-cta">
+                      <div class="recent__item-cta__price">$ ${item.price}</div>
+                      <div class="recent__item-cta__favorite recent__item-cta__img active">
+                        <i class="fa-regular fa-heart"></i>
+                      </div>
+                      <div class="recent__item-cta__cart recent__item-cta__img">
+                        <img src="./img/cart.svg" alt="" />
+                      </div>
+                    </div>
+                  </div>
+                  <div class="recent__item-stock">${productCardInfo.availabilityStatus}</div>
+                  <div class="recent__item-counter">
+                    <div class="recent__item-counter__decrement">
+                      <i class="fa-solid fa-minus"></i>
+                    </div>
+                    <div class="recent__item-counter__num">0</div>
+                    <div class="recent__item-counter__increment">
+                      <i class="fa-solid fa-plus"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="cart__right"></div>
+          </div>
         </div>
       </section>
     </main>
