--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
           <div class="cart__row">
             <div class="cart__left layout-rows">
-              <div class="cart__item">
+              <!-- <div class="cart__item">
                 <div class="placeholder"></div>
                 <div class="recent__item-img">
                   <img src="${item.images[0]}" alt="" class="recent__item-img__image" />
@@ -236,7 +236,7 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
             <div class="cart__right"></div>
           </div>
