empty cart, fix active classes

--- a/index.html
+++ b/index.html
@@ -203,21 +203,14 @@
 
       <section class="cart hidden">
         <div class="container">
-          <div class="cart__title title-2">Cart <span>${products.length} items</span></div>
+          <div class="cart__title title-2">Cart</div>
 
           <div class="cart__row">
             <div class="cart__left layout-rows">
               <!-- cart items from js -->
             </div>
             <div class="cart__right">
-              <div class="cart__right-title">Total:</div>
-              <div class="cart__right-sum">
-                <!-- <div class="cart__right-sum__items">3 items</div>
-                <div class="cart__right-sum__total">$ 1200</div> -->
-              </div>
-              <div class="cart__right-btn">
-                <button>Go to checkout</button>
-              </div>
+              <!-- from js -->
             </div>
           </div>
         </div>
