started checkout page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="container">
         <div class="header__row">
           <div class="logo">
-            <a href="#header">MVM</a>
+            <a href="#">MVM</a>
           </div>
           <div class="header__catalog">
             <button class="header__catalog-btn">
@@ -215,6 +215,17 @@
           </div>
         </div>
       </section>
+
+      <div class="checkout hidden">
+        <div class="container">
+          <form class="checkout__form">
+            <div class="checkout__form-item">
+              <label for="phone" class="checkout__form-item__label">Phone number</label>
+              <input type="number" name="phone" class="checkout__form-item__input" />
+            </div>
+          </form>
+        </div>
+      </div>
     </main>
   </body>
 </html>
