--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- <i class="fa-solid fa-check"></i> -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -16,6 +15,11 @@
     <script
       defer
       src="https://unpkg.com/libphonenumber-js@^1.7.6/bundle/libphonenumber-max.js"
+    ></script>
+    <script
+      defer
+      src="https://api-maps.yandex.ru/2.1/?apikey=58579d6b-3a45-4873-9aad-c4bb7c540fc0
+&lang=ru_RU"
     ></script>
     <!-- <script defer>
     </script> -->
@@ -272,7 +276,17 @@
                 </div>
 
                 <div class="checkout__delivery-content">
-                  <!-- tabs content -->
+                  <div id="map"></div>
+                  <div id="selected-info"></div>
+                  <!-- <div class="checkout__delivery-content__img">
+                    <i class="fa-solid fa-location-dot"></i>
+                  </div>
+                  <div class="checkout__delivery-content__place">
+                    <div class="checkout__delivery-content__place-title">MVM Shop</div>
+                    <div class="checkout__delivery-content__place-address">
+                      207 S Memorial Dr, Tulsa, OK 74112, USA
+                    </div>
+                  </div> -->
                 </div>
               </div>
 
