checkout page(map is done and upgraded)

--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
       src="https://api-maps.yandex.ru/2.1/?apikey=58579d6b-3a45-4873-9aad-c4bb7c540fc0
 &lang=ru_RU"
     ></script>
-    <!-- <script defer>
-    </script> -->
   </head>
   <body>
     <header class="header" id="header">
@@ -276,17 +274,12 @@
                 </div>
 
                 <div class="checkout__delivery-content">
-                  <div id="map"></div>
-                  <div id="selected-info"></div>
-                  <!-- <div class="checkout__delivery-content__img">
-                    <i class="fa-solid fa-location-dot"></i>
-                  </div>
-                  <div class="checkout__delivery-content__place">
-                    <div class="checkout__delivery-content__place-title">MVM Shop</div>
-                    <div class="checkout__delivery-content__place-address">
-                      207 S Memorial Dr, Tulsa, OK 74112, USA
+                  <div>
+                    <div id="map"></div>
+                    <div class="map__confirm">
+                      <button class="map__confirm-btn" type="button">Deliver here</button>
                     </div>
-                  </div> -->
+                  </div>
                 </div>
               </div>
 
