--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
       </section>
 
       <div class="checkout hidden">
+        <div class="checkout__alert hidden"></div>
         <div class="container">
           <div class="checkout__return">Return to cart</div>
           <div class="checkout__title title-2">Checkout</div>
@@ -236,7 +237,7 @@
                 <div class="checkout__payment-badges__swiper">
                   <div class="swiper paymentSwiper">
                     <div class="swiper-wrapper">
-                      <div class="swiper-slide paymentSwiper__slide">
+                      <div class="swiper-slide paymentSwiper__slide active">
                         <img src="./img/mastercard.png" alt="" />
                       </div>
 
