orders page and map fix

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         </div>
       </section>
 
-      <div class="checkout hidden">
+      <section class="checkout hidden">
         <div class="checkout__alert hidden"></div>
         <div class="container">
           <div class="checkout__return">Return to cart</div>
@@ -303,7 +303,17 @@
             </div>
           </div>
         </div>
-      </div>
+      </section>
+
+      <section class="profile">
+        <div class="container">
+          <div class="profile__title title-2">Orders</div>
+
+          <div class="profile__content">
+            <!-- order from js -->
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
