--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                 <div class="checkout__delivery-content">
                   <div>
                     <div id="map"></div>
-                    <div class="map__confirm">
+                    <div class="map__confirm map__confirm-stores">
                       <button class="map__confirm-btn" type="button">Deliver here</button>
                     </div>
                   </div>
