--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
   <body>
     <header class="header" id="header">
       <div class="container">
+        <div class="logo">
+          <a href="#">MVM</a>
+        </div>
         <div class="header__row">
           <div class="logo">
             <a href="#">MVM</a>
@@ -54,6 +57,9 @@
               <i class="fa-regular fa-user"></i>
             </div>
           </nav>
+        </div>
+        <div class="menu-icon-wrapper">
+          <div class="menu-icon"></div>
         </div>
       </div>
     </header>
@@ -307,11 +313,7 @@
 
       <section class="profile">
         <div class="container">
-          <div class="profile__title title-2">Orders</div>
-
-          <div class="profile__content">
-            <!-- order from js -->
-          </div>
+          <!-- orders from js -->
         </div>
       </section>
     </main>
